--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,16 @@
-<h2 id="title">Welcome to Ember</h2>
+<div class="ui container">
+  <div class="ui menu">
+    <a class="item">Add buddy</a>
+    <div class="right menu">
+      <div class="item">
+        <div class="ui buttons">
+          <button class="ui button">day</button>
+          <div class="or"></div>
+          <button class="ui button">night</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-{{outlet}}
+  {{outlet}}
+</div>
